<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner"
                app:cardElevation="@dimen/card_elevation"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/card_image_height_home"
                        android:contentDescription="@string/card_image_description"
                        android:src="@drawable/banner_platzi_conf"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/platzi_main_color"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_que_es"
                        android:textStyle="bold"
                        android:textSize="@dimen/titleSize"
                        android:textColor="@color/platzi_secondary_color"
                        android:layout_marginEnd="@dimen/marginHomeSubtitle"
                        android:layout_marginStart="@dimen/marginHomeSubtitle"
                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/platzi_main_color"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_que_es_resp"
                        android:textSize="@dimen/subtitle_size"
                        android:textColor="@color/platzi_main_color"
                        android:layout_marginEnd="@dimen/marginHomeSubtitle"
                        android:layout_marginStart="@dimen/marginHomeSubtitle"
                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner"
                app:cardElevation="@dimen/card_elevation"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/card_image_height_home"
                        android:contentDescription="@string/card_image_description"
                        android:src="@drawable/platzi_conf_2"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/platzi_main_color"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_info"
                        android:textStyle="bold"
                        android:textSize="@dimen/titleSize"
                        android:textColor="@color/platzi_secondary_color"
                        android:layout_marginEnd="@dimen/marginHomeSubtitle"
                        android:layout_marginStart="@dimen/marginHomeSubtitle"
                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/platzi_main_color"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_info_resp"
                        android:textSize="@dimen/subtitle_size"
                        android:textColor="@color/platzi_main_color"
                        android:layout_marginEnd="@dimen/marginHomeSubtitle"
                        android:layout_marginStart="@dimen/marginHomeSubtitle"
                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner"
                app:cardElevation="@dimen/card_elevation"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/card_image_height_home"
                        android:contentDescription="@string/card_image_description"
                        android:src="@drawable/platzi_conf_3"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/platzi_main_color"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_por_que"
                        android:textStyle="bold"
                        android:textSize="@dimen/titleSize"
                        android:textColor="@color/platzi_secondary_color"
                        android:layout_marginEnd="@dimen/marginHomeSubtitle"
                        android:layout_marginStart="@dimen/marginHomeSubtitle"
                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/platzi_main_color"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_por_que_resp"
                        android:textSize="@dimen/subtitle_size"
                        android:textColor="@color/platzi_main_color"
                        android:layout_marginEnd="@dimen/marginHomeSubtitle"
                        android:layout_marginStart="@dimen/marginHomeSubtitle"
                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>