<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ScheduleDetailDialogFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Toolbar
            android:id="@+id/tb_conference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/platzi_conf_2"
                        android:scaleType="centerCrop"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/platzi_main_color"
                        android:alpha="0.5"/>

                    <TextView
                        android:id="@+id/tv_conference_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_conference_place_holder"
                        android:textSize="@dimen/schedule_title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:layout_centerInParent="true"
                        tools:ignore="RtlHardcoded" />

                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/card_corner"
                    android:elevation="1dp"
                    android:layout_margin="@dimen/card_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_detail_conference_hour"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hour_place_holder"
                            android:textSize="@dimen/subtitle_size"
                            android:textColor="@color/platzi_main_color"
                            android:textStyle="bold"
                            android:gravity="center_horizontal"
                            android:layout_margin="@dimen/detail_conference_hour_margin"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:id="@+id/tv_detail_conference_speaker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/speaker_name_place_holder"
                            android:textSize="@dimen/subtitle_size"
                            android:textColor="@color/platzi_main_color"
                            android:textStyle="bold"
                            android:gravity="center_horizontal"
                            android:layout_margin="@dimen/detail_conference_hour_margin"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:id="@+id/tv_detail_conference_tag"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tag_place_holder"
                            android:textSize="@dimen/subtitle_size"
                            android:textColor="@color/platzi_main_color"
                            android:textStyle="bold"
                            android:gravity="center_horizontal"
                            android:layout_margin="@dimen/detail_conference_hour_margin"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:id="@+id/tv_detail_conference_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/conference_detail_place_holder"
                            android:textSize="@dimen/subtitle_size"
                            android:textColor="@color/platzi_main_color"
                            android:textStyle="bold"
                            android:gravity="center_horizontal"
                            android:layout_margin="@dimen/detail_conference_hour_margin"
                            tools:ignore="RtlHardcoded" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>